--- a/.gitignore
+++ b/.gitignore
@@ -103,14 +103,11 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2013 CU2
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2013
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2010 SP3
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.dll
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.xml
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.dll
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
 Thumbs.db
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2013 SP1 CU5/ExchangeDkimSigner.dll
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2013 SP1 CU5/ExchangeDkimSigner.dll.config
-/Src/Exchange.DkimSigner/bin/Debug Exchange 2013 SP1 CU5/ExchangeDkimSigner.pdb
+/Src/Exchange.DkimSigner/bin/Debug *
+/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.config
+/Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
