--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ ClientBin
 ~$*
 *.dbmdl
 Generated_Code #added for RIA/Silverlight projects
+Thumbs.db
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
@@ -103,11 +104,12 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
+/Src/Exchange.DkimSigner/bin/Debug *
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.dll
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Common.xml
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.dll
 /Src/Exchange.DkimSigner/bin/*/Microsoft.Exchange.Data.Transport.xml
-Thumbs.db
-/Src/Exchange.DkimSigner/bin/Debug *
+
+/Src/Configuration.DkimSigner/bin/Debug *
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.config
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
