--- a/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
+++ b/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
@@ -106,11 +106,11 @@
     <Compile Include="..\Exchange.DkimSigner\RSA\BigInteger.cs">
       <Link>RSA\BigInteger.cs</Link>
     </Compile>
-    <Compile Include="ExchangeTransportServiceWindows.cs">
+    <Compile Include="ExchangeTransportServiceWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ExchangeTransportServiceWindows.Designer.cs">
-      <DependentUpon>ExchangeTransportServiceWindows.cs</DependentUpon>
+    <Compile Include="ExchangeTransportServiceWindow.Designer.cs">
+      <DependentUpon>ExchangeTransportServiceWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Exchange\ExchangeServer.cs" />
     <Compile Include="Exchange\ExchangeServerException.cs" />
@@ -202,11 +202,11 @@
     <Compile Include="GitHub\Api.cs" />
     <Compile Include="GitHub\ApiWrapper.cs" />
     <Compile Include="GitHub\DataContract.cs" />
-    <Compile Include="HeaderInputWindows.cs">
+    <Compile Include="HeaderInputWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="HeaderInputWindows.Designer.cs">
-      <DependentUpon>HeaderInputWindows.cs</DependentUpon>
+    <Compile Include="HeaderInputWindow.Designer.cs">
+      <DependentUpon>HeaderInputWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
@@ -226,11 +226,11 @@
     <EmbeddedResource Include="DownloadProgressWindow.resx">
       <DependentUpon>DownloadProgressWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ExchangeTransportServiceWindows.resx">
-      <DependentUpon>ExchangeTransportServiceWindows.cs</DependentUpon>
+    <EmbeddedResource Include="ExchangeTransportServiceWindow.resx">
+      <DependentUpon>ExchangeTransportServiceWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HeaderInputWindows.resx">
-      <DependentUpon>HeaderInputWindows.cs</DependentUpon>
+    <EmbeddedResource Include="HeaderInputWindow.resx">
+      <DependentUpon>HeaderInputWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
