--- a/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
+++ b/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ExchangeTransportServiceWindow.Designer.cs">
       <DependentUpon>ExchangeTransportServiceWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Exchange\ExchangeHelper.cs" />
     <Compile Include="Exchange\ExchangeServer.cs" />
     <Compile Include="Exchange\ExchangeServerException.cs" />
     <Compile Include="Exchange\TransportServiceAgent.cs" />
