--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
-language: c
+language: objective-c
+
+env:
+  global:
+    - EnableNuGetPackageRestore=true
+  matrix:
+    - MONO_VERSION="3.10.0"
 
 install:
-  - sudo apt-get install mono-devel mono-gmcs nunit-console
+  - wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
+  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
 
 script:
   - xbuild travis.proj
-
