Added coverity build script

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ UpgradeLog*.XML
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe*
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe
 /Src/Configuration.DkimSigner/bin/Release/Configuration.DkimSigner.vshost.exe.manifest
+/cov-int
+/cov-int.zip
