--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
@@ -165,6 +165,15 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ex2013 SP1 CU8|AnyCPU'">
+    <OutputPath>bin\Exchange 2013 SP1 CU8\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Exchange.Data.Common" Condition="'$(Configuration)'=='Debug Ex2010 SP3'">
       <HintPath>..\..\Lib\Exchange 2010 SP3\Microsoft.Exchange.Data.Common.dll</HintPath>
@@ -264,6 +273,12 @@
       <HintPath>..\..\Lib\Exchange 2013 SP1 CU7\Microsoft.Exchange.Data.Common.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Exchange.Data.Transport" Condition="'$(Configuration)'=='Ex2013 SP1 CU7'">
+      <HintPath>..\..\Lib\Exchange 2013 SP1 CU7\Microsoft.Exchange.Data.Transport.dll</HintPath>
+    </Reference>
+	<Reference Include="Microsoft.Exchange.Data.Common" Condition="'$(Configuration)'=='Ex2013 SP1 CU8'">
+      <HintPath>..\..\Lib\Exchange 2013 SP1 CU7\Microsoft.Exchange.Data.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Exchange.Data.Transport" Condition="'$(Configuration)'=='Ex2013 SP1 CU8'">
       <HintPath>..\..\Lib\Exchange 2013 SP1 CU7\Microsoft.Exchange.Data.Transport.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
