Fix: Commit missing file

--- a/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
+++ b/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
@@ -116,10 +116,11 @@
     </Compile>
     <Compile Include="Exchange\ExchangeServer.cs" />
     <Compile Include="Exchange\ExchangeServerException.cs" />
+    <Compile Include="Exchange\TransportServiceAction.cs" />
     <Compile Include="Exchange\TransportServiceAgent.cs" />
     <Compile Include="Exchange\PowershellHelper.cs" />
-    <Compile Include="Exchange\TransportServiceStatus.cs" />
-    <Compile Include="Exchange\TransportServiceStatusObserver.cs" />
+    <Compile Include="Exchange\TransportService.cs" />
+    <Compile Include="Exchange\TransportServiceObserver.cs" />
     <Compile Include="FileIO\FileOperation.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
