--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ install:
 script:
   - xbuild travis.proj
 
-addons:
-  coverity_scan:
-    project:
-      name: "Pro/dkim-exchange"
-      description: "Build submitted via Travis CI"
-    notification_email: git@s.profanter.me
-    build_command_prepend: "xbuild /t:CleanAll travis.proj"
-    build_command:   "xbuild /t:Build travis.proj"
-    branch_pattern: coverity_scan
+#addons:
+#  coverity_scan:
+#    project:
+#      name: "Pro/dkim-exchange"
+#      description: "Build submitted via Travis CI"
+#    notification_email: git@s.profanter.me
+#    build_command_prepend: "xbuild /t:CleanAll travis.proj"
+#    build_command:   "xbuild /t:Build travis.proj"
+#    branch_pattern: coverity_scan
